improve test framework

--- a/libft_tests/Makefile
+++ b/libft_tests/Makefile
@@ -4,6 +4,7 @@
 NAME = libft_tests
 CONFIG_RENDU_PATH_KEY = LIBFT_PATH
 LIBS = -lft -L$(RENDU_PATH)
+POST_PATTERN = "^01_part2"
 #===============================================================================
 # COMMON
 #===============================================================================
@@ -11,22 +12,36 @@ RENDU_PATH = $(shell grep $(CONFIG_RENDU_PATH_KEY) ../config.ini | cut -d '=' -f
 INCLUDES = -I ../testframework/v3/includes -I . -I $(RENDU_PATH)/includes
 FLAGS = -g -Werror -Wextra -Wall
 SOURCE = ./tests/*.spec.c main.c utils.c
-tests ?= spec.c$$
-ADD_TESTS = $(shell ls -1 tests | grep -e "$(tests)" | \
-		sed -E "s/(.*)\.spec\.c/MT_ADD_SUITE\(mt, \1, suite_\1);/g")
-PROTOTYPES = $(shell ls -1 tests | grep -e "$(tests)" | sed -E "s/(.*)\.spec\.c/MT_ADD_PROTO\(\1\);/g")
+pattern ?= spec.c$$
+TEST_FILES = ls -1 tests | grep -e "$(pattern)" | grep -e "$(POST_PATTERN)"
+ADD_TESTS = $(shell $(TEST_FILES) | sed -E "s/(.*)\.spec\.c/MT_ADD_SUITE\(mt, \1, suite_\1);/g")
+PROTOTYPES = $(shell $(TEST_FILES) | sed -E "s/(.*)\.spec\.c/MT_ADD_PROTO\(\1\);/g")
 DEFINES = -DPROTOTYPES="$(PROTOTYPES)" -DADD_TESTS="$(ADD_TESTS)" -DRENDU_PATH="\"$(RENDU_PATH)\""
 FRAMEWORK_LIB = -L../testframework/v3 -lmt_framework
 
-all: $(NAME)
-	./$(NAME)
+$(NAME):
 
-project:
+exec_tests:
 	make re -k -C $(RENDU_PATH)
 	make -k -C ../testframework/v3/
-
-$(NAME): project
 	gcc $(FLAGS) $(INCLUDES) $(DEFINES) $(SOURCE) $(LIBS) $(FRAMEWORK_LIB) -o $(NAME)
+	./$(NAME)
+
+part1_init:
+	$(eval POST_PATTERN = "^00_part1")
+part1: part1_init exec_tests
+
+part2_init:
+	$(eval POST_PATTERN = "^01_part2")
+part2: part2_init exec_tests
+
+bonus_init:
+	$(eval POST_PATTERN = "^02_bonus")
+bonus: bonus_init exec_tests
+
+all_init:
+	$(eval POST_PATTERN = "")
+all: all_init exec_tests
 
 clean:
 	rm -f $(OBJECTS)
